Sun, 22 Jun 1997  Jim Kingdon

	* main.c (main): Move setting of server_active inside #ifdef
	SERVER_SUPPORT; otherwise the variable doesn't exist.
	* main.c (main): Call return after exit to shut up warning.

Fri Jun 20 22:56:34 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (connect_to_pserver): On "I HATE YOU", give
	"authorization failed" fatal error regardless of verify_only.
	* login.c (login): Don't print that "incorrect password" message;
	it now is possible with an --allow-root failure as well as an
	incorrect password.  cvsclient.texi doesn't really specify what I
	HATE YOU means in any detail, and it seems a little silly for
	login to give different messages than the other commands.
	* client.c, client.h (connect_to_pserver): Return type now void.

Thu Jun 19 12:16:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_root): Give error on duplicate Root request.
	Call parse_config.
	* parseinfo.c, cvs.h (parse_config): New function.
	* cvs.h (CVSROOTADM_CONFIG): Added.
	* main.c (main): Set server_active here...
	* server.c (server): ...not here.  That seems cleaner than
	strcmp's between command_name and "server" in main.c.
	* main.c (main): Call parse_config.
	* main.c, cvs.h (free_Rcsbin): Make global.
	* mkmodules.c (filelist): Add CVSROOTADM_CONFIG.

Wed Jun 18 11:24:31 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.11.

	* Version 1.9.10.

Tue Jun 17 22:48:00 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Add --allow-root=ROOT argument; call
	root_allow_add for each time it is specified.  Call
	root_allow_free before exiting.
	* root.c, cvs.h (root_allow_add, root_allow_free, root_allow_ok):
	New function.
	* server.c (pserver_authenticate_connection): If root_allow_ok
	doesn't like the CVSROOT directory, don't allow access.

Tue Jun 17 14:30:14 1997  Jim Kingdon  (unknown@beezley)

	* client.c: Add "copyright" notice.  If NO_EXT_METHOD, omit